testsuite/tests/typecheck/should_fail/T16453E1.hs
module Main where
import T16453T
