testsuite/tests/typecheck/should_fail/T16453E1.stderr
T16453E1.hs:1:1: error:
    The IO action ‘main’ is not exported by module ‘Main’
